--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas></canvas>
+        <canvas></canvas>
+
     <script src="collisions.js"></script>
+    <script src="portal.js"></script>
+    <script src="classes.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
